# sliding_puzzle_game

./: Cargo.toml  LICENSE  README.md  game.js  index.html  push.sh  rust-toolchain.toml  sliding_puzzle_game.d.ts  sliding_puzzle_game.js  sliding_puzzle_game_bg.wasm.d.ts
.cargo/: config.toml
.github/workflows/: rust.yml
src/: animation.rs  floating.rs  game.rs  game_menu.rs  game_start.rs  lib.rs  main.rs
src/game/: buttons.rs  counter.rs  mod.rs
